# 065-538-720-GNC

./: .gitignore  DataPath.drawio  README.md  gitignore.txt  vivado_pid5660.str
Assembly_Practice/: Fact.txt  Mul.txt  Mul16.txt  Sobel.txt  Tri.txt
CPU/: Makefile  Memory.fir  Memory.v  Memorytrace.vcd  Store_Unit.anno.json  Store_Unit.fir  Store_Unit.v  control_store  control_storetrace.vcd  core_robin_test_bench  core_robintrace.vcd  store_memory_connect.anno.json  store_memory_connect.fir  store_memory_connect.v  test_bench_Memory  test_bench_control_store.cpp  test_bench_control_store_v2.cpp  test_bench_core_robin  test_bench_register_file_sobel  test_bench_robin_core  test_bench_robin_core_v2  test_bench_robin_core_v2_sobel  test_bench_robin_coretrace.vcd
CPU/blank_modules/: ALU.scala  data_memory_interface.scala
CPU/obj_dir/: VALU.cpp  VALU.h  VALU.mk  (+72 more)
CPU_unified_memory/: test_bench_L1_I_cache
Circuit_Drawings/: DataPath.drawio  New Circuit.drawio  Untitled Diagram.drawio
Kaveesha/Testing_load_unit/LoadUnit/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  led_movertrace.vcd  test_bench_load_unit  test_bench_load_unit.cpp
Kaveesha/Testing_load_unit/LoadUnit/obj_dir/: VLoad_Unit.cpp  VLoad_Unit.h  VLoad_Unit.mk  VLoad_Unit__ALLcls.cpp  VLoad_Unit__Syms.cpp  VLoad_Unit__Syms.h  VLoad_Unit__Trace.cpp  VLoad_Unit__Trace__Slow.cpp  VLoad_Unit__ver.d  VLoad_Unit_classes.mk
Kaveesha/Testing_load_unit/LoadUnit/src/main/scala/: LoadUnit.scala
LoadUnit/: build.sbt
default_test_becnh/: led_mover.cpp
raven_core/: instruction_generator.py
(+118 files in other folders)
